[tool.poetry]
name = "lab2hub"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
"github3.py" = "*"
python-gitlab = "*"
GitPython = "*"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ['py39']

[tool.isort]
profile = "black"
line_length = 120